# pala-one-firmware-multi-screensaver

./: .gitignore  README.md  platformio.ini
Heltec V1.2/HeltecV1_2_Pala_One_2_1_1/: HeltecV1_2_Pala_One_2_1.ino
Pala_One_2_1/: Pala_One_2_1.ino  Pala_One_2_1_kevinst1r.ino
Pala_One_2_1/src/: config.h  state.cpp  state.h
Pala_One_2_1/src/hal/: app_loader.cpp  app_loader.h  battery.cpp  battery.h  display.cpp  display.h  file_stream.h  input.cpp  input.h  softap.cpp  softap.h
Pala_One_2_1/src/pure/: app_header.cpp  app_header.h  arduino_compat.h  bookmark_label.cpp  bookmark_label.h  bookmarks_codec.cpp  bookmarks_codec.h  hashing.cpp  hashing.h  library_nav.cpp  library_nav.h  list_codec.cpp  list_codec.h  page_offset_table.h  paginator.cpp  paginator.h  paths.cpp  paths.h  stream.h  text_util.cpp  text_util.h
Pala_One_2_1/src/storage/: app_catalog.cpp  app_catalog.h  book_metadata.cpp  book_metadata.h  fs_util.cpp  fs_util.h  kv_store.h  library.cpp  library.h  list_items.cpp  list_items.h  page_cache.cpp  page_cache.h  preferences_store.h
Pala_One_2_1/src/ui/: font.cpp  font.h  pala_api_impl.cpp  pala_api_impl.h  reader.cpp  reader.h  screen.h  sleep.cpp  sleep.h  text.cpp  text.h  toast.cpp  toast.h  widgets.cpp  widgets.h
Pala_One_2_1/src/ui/screens/: about_screen.cpp  about_screen.h  apps_screen.cpp  apps_screen.h  library_screen.cpp  library_screen.h  list_screen.cpp  list_screen.h  reader_screen.cpp  reader_screen.h  upload_screen.cpp  upload_screen.h
Pala_One_2_1/src/ui/screens/bookmarks/: book_select_screen.cpp  book_select_screen.h  bookmark_list_screen.cpp  bookmark_list_screen.h  preview_screen.cpp  preview_screen.h  session.cpp  session.h
Pala_One_2_1/src/web/: apps_upload.cpp  apps_upload.h  bookmarks.cpp  bookmarks.h  chrome.cpp  chrome.h  files.cpp  files.h  list.cpp  list.h  reset.cpp  reset.h  settings.cpp  settings.h  upload.cpp  upload.h  web.cpp  web.h
Pala_One_2_1_kevinst1r/: Pala_One_2_1_kevinst1r.ino  opendyslexic_u8g2_fonts.h
scripts/: build_info.py
test/: CMakeLists.txt  README.md  main.cpp  map_kv_store.h  test_app_header.cpp  test_bookmark_label.cpp  test_bookmarks_codec.cpp  test_bookmarks_store.cpp  test_framework.h  test_hashing.cpp  test_library_nav.cpp  test_list_codec.cpp  test_list_store.cpp  test_paginator.cpp  test_paths.cpp  test_text_util.cpp
